# black-white

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: linter.yaml  release.yaml
src/: config_variables.py  main.py
src/classes/: alert_dialog.py  badge.py  buttons.py  checkbox.py  column.py  container.py  dropdown.py  file_picker.py  input.py  progress_bar.py  row.py  text.py
src/config/: config_variables.py  const.py
src/modules/: set_system_variable.py
src/process/: department_dropdown.py  download.py  folder_selector.py  login.py  progress_popup.py  starting_point.py  upload.py
src/utils/: basic_function.py  gcloud_calls.py
